--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,10 @@
 			            <li><a href="/"> Home</a></li>
 			            <li class="current"><a href="../about/">About</a></li>
 				        <li><a href="../board/">Kusa board</a></li>
-			            <li><a href="#events">Events</a></li>
-			            <li><a href="photos/">Photos</a></li>
-			            <li><a href="#jobs">Jobs</a></li>
-			            <li><a href="#contact">Contact US</a></li>
+			            <li><a href="../events/">Events</a></li>
+			            <li><a href="../photos/">Photos</a></li>
+			            <li><a href="../comment/">Comments</a></li>
+			            <li><a href="../contact/">Contact US</a></li>
 		         	</ul> <!-- end #nav -->
 		     	</nav>
 
@@ -60,26 +60,12 @@
 						        <li>
 
 						        	<img src="{{ STATIC_URL }}images/main2_new.jpg">
-						        	<!--
-									<h1 class="carousel-title" id="connect-title">Connect</h1>
-						        	<div class="carousel-desc" id="connect-desc">
-						        		<p>bond</p><br>
-						        		<p>network</p><br>
-						        		<p>socialize</p>
-						        	</div>
-						        	-->
+						       
 						        </li>
 
 						        <li>
 						        	<img src="{{ STATIC_URL }}images/main1_new.jpg">
-						        	<!--
-					        		<h1 class="carousel-title" id="learn-title">Learn</h1>
-						        	<div class="carousel-desc" id="learn-desc">
-						        		<p>guidance</p><br>
-						        		<p>information</p><br>
-						        		<p>mentorship</p>
-						        	</div>
-						        -->
+						        
 								</li>
 						        <li>
 						        	<img src="{{ STATIC_URL }}images/main3_new.jpg">			  
@@ -128,38 +114,6 @@
 			<!-- <div id="white-rectangle"></div> -->
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-			<!--carousel/about/exec/photo/calendar/contact-->
-<!--
-			<div id="maininfo">
-				{% block carousel %}{% endblock %}
-				{% block about %}{% endblock %}
-				{% block exec %}{% endblock %}
-				{% block events %}{% endblock %}
-				{% block photo %}{% endblock %}
-				{% block contact %}{% endblock %}
-			
-			</div>
-		-->
 	</body >
 </html>
 
