--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,58 +1,216 @@
-{% block photo %}
-<div id="photos">
-	<div class="section-container">
-		<div class="narrower-container">
-			<div class="section-title">
-				<h1> Photos </h1>
-			</div>
-		    <div class="section-content">
-		    	
-		    		<table class="photo-table" id="photo-page-1">
-						{% for filename in filenames %}
-							{% if forloop.counter == 9 %}
-							</table>
-							<table class="photo-table" id="photo-page-2" style="display:none">							
-							{% endif %}
-							{% if forloop.counter == 1 or forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}
-							<tr>
-							{% endif %}
-								<td>
-				    				<a class="fancybox" rel="group" href="#{{forloop.counter}}">
-				    					<div class="title-img">
-				    						<img src="{{ STATIC_URL }}images/{{filename}}.jpg" >
-				    					</div>
-				    					<h4>{{filename}}</h4>
-				    				</a>
-				    			</td>
-				    		{% if forloop.counter == 4 or forloop.counter == 8 or forloop.counter == 12 or forloop.counter == 16 %}
-				    		</tr>
-				    		{% endif %}
-						{% endfor %}
-							</tr>
-		    		</table>
+<html>
+	<head>
+		<title>Vanderbilt KUSA: Vanderbilt University Korean Undergraduate Student Association</title>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style_photo.css" />  
 
-		    	<!-- Pagination later when there are more photos -->
-		    	<ul class="pagination" id="photo-pagination">
-				  	<!-- <li class="disabled" id="prev-photo-page">  <a href="#">&laquo;</a> </li> -->
-				  	<li class="active" id="photo-page-1"> 	 	<a href="#">1 </a>		</li>
-				  	<li id="photo-page-2">					 	<a href="#">2</a>		</li>
-					<!-- <li id="next-photo-page">					<a href="#">&raquo;</a> </li> -->
-				<!-- </ul> -->
-			</div>
-		</div>
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/magnific-popup.css" />                
+           
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.css">
+        <link href="http://fonts.googleapis.com/css?family=Lato:300|Oswald" rel="stylesheet" type="text/css" /> 
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jcarousel.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
 
-		{% for url_file in photo_urls %}
-		<div style="display:none">
-			<div id="{{forloop.counter}}">
-				<div class="gallery" id="gallery{{forloop.counter}}">
-					{% for url in url_file %}
-						<img src="{{url}}" >
-					{% endfor %}
-				</div>
-			</div>
-		</div>
-		{% endfor %}
+        <script src="{{ STATIC_URL }}js/magnific-popup.js"></script>
+        <script src="{{ STATIC_URL }}js/modernizr.js"></script>
+         <script src="{{ STATIC_URL }}js/init.js"></script>
+
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
+        <!-- for google analytics -->
+        <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-61754400-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
+        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<meta property="og:url" content="http://vanderbiltkusa.herokuapp.com"/> 
+		<meta property="og:title" content="Vanderbilt KUSA"/>
+		<meta property="og:description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture."/> 
+		<meta property="og:image" content="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/269344_407788769304987_1034310108_n.jpg?oh=bc0153f689b5e37d0bc92fb53c679ef7&oe=5461ED7E&__gda__=1416801199_5d173725c2f92c3bb524a8b5bb41ccfa"/> 
+
+
+		<link media="all" href="/css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css">
+		<link media="all" href="/css/jquery.fb-album.css" rel="stylesheet" type="text/css">
+		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+		<script src="/js/jquery.fb-album.js"></script>
+		<script src="http://connect.facebook.net/de_DE/all.js"></script>
+
+
+			<script>
+		function facebookShare(url) {
+			url = 'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(url);
+			popup(url, 'twitter-tweet-dialog', 626, 436);
+			return false;
+		}
+		function googleShare(url) {
+			url = 'https://plus.google.com/share?url='+encodeURIComponent(url);
+			popup(url, 'twitter-tweet-dialog', 626, 436);
+			return false;
+		}
+		function twitterShare(url) {
+			url = 'https://twitter.com/share?url='+encodeURIComponent(url);
+			popup(url, 'twitter-tweet-dialog', 575, 350);
+			return false;
+		}
+		function popup(url, description, width, height) {
+			var left = (screen.width/2)-(width/2);
+			var top = (screen.height/2)-(height/2);
+			window.open(url, description, 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, width='+width+', height='+height+', top='+top+', left='+left);
+		}
+		</script>
+
+
+		<style>.albumText {font-size:11px;}
+								.albumThumb, .photoThumb, .albumThumb:hover, .albumThumb:hover .albumThumbWrap, .photoThumb:hover {-webkit-transition-delay: 0.05s;
+								-moz-transition-delay: 0.05s;
+								-o-transition-delay: 0.05s;
+								transition-delay: 0.05s;
+								-webkit-transition-duration: 0.5s;
+								-moz-transition-duration: 0.5s;
+								-o-transition-duration: 0.5s;
+								transition-duration: 0.5s;
+								transition-property: opacity;}
+								.albumWrapper {
+									width:170px;
+									margin-right:10px;
+									margin-bottom:10px;
+								}			
+								body {margin:0;}
+								.fbLink {color:#000000;}
+								.fbLink:hover {opacity:0.8;}
+								#fb-album {display:inline-block;}
+								#fb-albums-all {margin:0;}
+								.albumThumb {margin:0;position:relative;}
+								.albumDetails {margin-top:5px;}
+								.facebook, .twitter, .google {width:20px;height:20px;background-repeat:no-repeat;opacity:0.5;float:right;margin-right:3px;
+										-webkit-transition-delay: 0.02s;
+										-moz-transition-delay: 0.02s;
+										-o-transition-delay: 0.02s;
+										transition-delay: 0.02s;
+										-webkit-transition-duration: 0.4s;
+										-moz-transition-duration: 0.4s;
+										-o-transition-duration: 0.4s;
+										transition-duration: 0.4s;
+										transition-property:opacity;				
+								}
+								#albumWrapper:hover .albumThumb > #social-shares {opacity:1;}
+								.facebook:hover, .twitter:hover, .google:hover {opacity:1;}
+								.facebook { background-image: url(images/facebook-icon.png);}
+								.twitter { background-image: url(images/twitter-icon.png);}
+								.google { background-image: url(images/google-icon.png); margin-right:0px !important;}
+								#social-shares {
+									position:absolute;
+									right:7px;
+									bottom: 7px;
+									opacity:0;
+										-webkit-transition-delay: 0.02s;
+										-moz-transition-delay: 0.02s;
+										-o-transition-delay: 0.02s;
+										transition-delay: 0.02s;
+										-webkit-transition-duration: 0.4s;
+										-moz-transition-duration: 0.4s;
+										-o-transition-duration: 0.4s;
+										transition-duration: 0.4s;
+										transition-property:opacity;		
+								}
+								.rightarrow, .leftarrow {opacity:0;}
+								body:hover .rightarrow, #fb-album:hover .leftarrow {
+										opacity:1;
+										-webkit-transition-delay: 0.1s;
+										-moz-transition-delay: 0.1s;
+										-o-transition-delay: 0.1s;
+										transition-delay: 0.1s;
+										-webkit-transition-duration: 0.3s;
+										-moz-transition-duration: 0.3s;
+										-o-transition-duration: 0.3s;
+										transition-duration: 0.3s;
+										transition-property:opacity;	
+								}
+							</style>
+							</head>
+							<body>
+						<div id="fb-album">
+						
+							<div id="fb-album-content">
+								<ul id="fb-albums-all" class="fb-albums-all" style="padding:1px 0 0;">
+								</ul>
+							</div>
+						</div>		<script type="text/javascript">
+			$(function() {	
+				var width = $("#fb-albums-all").width();
+				var cols = Math.floor((width-10)/width);
+				$( ".albumWrapper" ).each(function( index ) {
+					if((index+1) % cols === 0) $( this ).css("margin-right", "0px");
+				});
+				
+				var maxHeight = -1;				
+				$(".albumWrapper ").each(function() {
+				  maxHeight = maxHeight > $(this).height() ? maxHeight : $(this).height();
+				});
+			
+				$(".albumWrapper ").each(function() {
+				  $(this).height(maxHeight);
+				});
+			
+			});
+		</script>	
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-41635590-1', 'facebookgalleria.com');
+	  ga('send', 'pageview');
+
+	</script>
+	</head>
+
+<body>
 		
-	</div>
-</div>
-{% endblock %}
+		<header id="home">
+				<nav id="nav-wrap">
+					<ul id="nav" class="nav">
+			            <li><a href="/"> Home</a></li>
+			            <li><a href="../about/">About</a></li>
+				        <li><a href="../board/">Kusa board</a></li>
+			            <li><a href="../events/">Events</a></li>
+			            <li class="current"><a href="../photos/">Photos</a></li>
+			            <li><a href="../comment/">Comments</a></li>
+			            <li><a href="../contact/">Contact US</a></li>
+		         	</ul> <!-- end #nav -->
+		     	</nav>
+		</header>	
+		<div id="photos">
+				   <div class="three columns header-col">
+		        	</div>
+		  <div class="nine columns main-col">
+
+		            <div class="row item">
+
+		               <div class="twelve columns">
+
+
+
+<iframe scrolling="no" marginheight="0" frameborder="0" width="1000px"  style="height: 502px;" src="http://facebookgalleria.com/gallery.php?id=1072855889439076&exclude=1072855889439076&display=album&rows=4&margin=10&cols=3&width=300&font_size=11&title_color=000000&hide_next_back=0&shape=rectangle&frame=1&token=8c03899a-53c0-11e6-acb3-f8ce1e2c8413"></iframe>
+ </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+     </div>
+
+</body>
+     
+         
