--- a/templates/exec.html
+++ b/templates/exec.html
@@ -67,7 +67,7 @@
 				-->
 <div id="container">
 						<div class="section-title">		
-					    	<h3>meet our 2016-2017 board</h3>
+					    	<h3>meet our 2016-2017 KUSA board</h3>
 					    </div>
 </div>
    <section id="board">
@@ -103,8 +103,8 @@
 						      <h4>Scott Lee
 			                <br>President</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> College of Arts & Sciences 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 									 </p>
 
@@ -143,8 +143,8 @@
 												      <h4>Jeffrey Dohan Kim
 									                  <br>Vice President</h4>
 												      	 <p>
-																<b>School:</b> College of Arts & Sciences (Vagelos) 
-																<br><b>Major:</b> Biochemistry, Biophysics 
+																<b>School:</b> College of Arts & Sciences 
+																<br><b>Major:</b> Economics
 																<br><b>Graduating Year:</b> 2017
 									               		 </p>
 											      </div>
@@ -181,8 +181,8 @@
 								      <h4>Choongwon Jin
 					                	<br>Treasurer</h4>
 						     		<p>
-									<b>School:</b> Wharton/Engineering 
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 								</p>
 								
@@ -224,8 +224,8 @@
 						      <h4>Crystal Kim
 			                <br>Secretary</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b>
 									<br><b>Graduating Year:</b> 2017
 								</p>
 			            <div class="link-box">
@@ -261,8 +261,8 @@
 						      <h4>Jun Lee
 			                <br>Special Events</h4>
 						     <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 							</p>
 			            <div class="link-box">
@@ -300,8 +300,8 @@
 						      <h4>Lois You
 			                <br>Study Abroad</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 									</p>			
 			            <div class="link-box">
@@ -339,8 +339,8 @@
 						      <h4>Soeun Ahn
 			                <br>Language Chair</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 									</p>			
 			            <div class="link-box">
@@ -378,8 +378,8 @@
 						      <h4>Wooseong Choi
 			                <br>Special Events</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 									</p>		
 			            <div class="link-box">
@@ -419,8 +419,8 @@
 						      <h4>Sean Ha
 			                <br>Publicity</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b> 
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 									</p>	
 			            <div class="link-box">
@@ -460,8 +460,8 @@
 						      <h4>Joey Yoon
 			                <br>GBM Planner</h4>
 						      <p>
-									<b>School:</b> Wharton/Engineering (M&T)
-									<br><b>Major:</b> Computer Science, Finance, Statistics 
+									<b>School:</b>
+									<br><b>Major:</b> 
 									<br><b>Graduating Year:</b> 2017
 										</p>
 			            <div class="link-box">
@@ -490,86 +490,3 @@
 
 
 
-
-<!--
-<div id="exec">
-	<div class="section-container">
-		<div class="narrower-container">
-			<div class="section-title">
-		    	<h1> Board Members </h1>
-		    </div>
-		    <!-- Nav tabs
-
-			<div class="section-content">
-				
-			    <div style="overflow:auto;height:300px", id="about-list">
-				    <ul class="nav nav-pills nav-stacked" id="about-tab" role="tablist">
-						<li class="active"><a href="#President" role="tab" data-toggle="tab"><h5>President</h5></a></li>	
-						<li><a href="#VP" role="tab" data-toggle="tab"><h5>Vice President</h5></a></li>
-						<li><a href="#political" role="tab" data-toggle="tab"><h5>Secretary</h5></a></li>
-						<li><a href="#social" role="tab" data-toggle="tab"><h5>Treasurer</h5></a></li>
-						<li><a href="#social" role="tab" data-toggle="tab"><h5>Event Planner</h5></a></li>
-						<li><a href="#social" role="tab" data-toggle="tab"><h5>Language Chair</h5></a></li>
-						<li><a href="#social" role="tab" data-toggle="tab"><h5>Publicity</h5></a></li>
-							<li><a href="#social" role="tab" data-toggle="tab"><h5>GBM Planner</h5></a></li>
-						</ul>
-				</div>
-
-				<div class="tab-content" id="about-content">
-					<div class="tab-pane fade in active" id="President">
-						<p>
-							<table>
-								<tr>
-										<td rowspan="5"><img src="{{STATIC_URL}}photos/doohee.jpg" /></td>
-										<th>Name:  </th>
-										<td>Doohee Lee</td>
-								</tr>
-								<tr>
-									<th>Class: </th>
-									<td>2017</td>
-								</tr>
-								<tr>
-									<th>Major: </th>
-									<td>
-										CSET major, Corporate Strategy minor
-									</td>
-								</tr>
-							</table>
-						</p>
-					</div>
-					<div class="tab-pane fade" id="VP">
-						<p>
-							<table>
-								<tr>
-										<td rowspan="5"><img src="{{STATIC_URL}}photos/dohan.jpg" /></td>
-										<th>Name:  </th>
-										<td>Jeffrey Dohan Kim</td>
-								</tr>
-								<tr>
-									<th>Class: </th>
-									<td>2017</td>
-								</tr>
-								<tr>
-									<th>Major: </th>
-									<td>
-										Economics Major
-									</td>
-								</tr>
-							</table>
-						</p>
-					</div>
-					<div class="tab-pane fade" id="cultural">
-	
-					</div>
-					<div class="tab-pane fade" id="political">
-
-					</div>
-					<div class="tab-pane fade" id="social">
-
-					</div>
-				</div>
-			</div>
-				<div id="white-rectangle"></div>
-		</div>
-	</div>
-	 -->
