Changed the HTML for the site

--- a/templates/exec.html
+++ b/templates/exec.html
@@ -67,7 +67,7 @@
 				-->
 <div id="container">
 						<div class="section-title">		
-					    	<h3>meet our 2016-2017 KUSA board</h3>
+					    	<h3>meet our 2016-2017 KUSA board members</h3>
 					    </div>
 </div>
    <section id="board">
